--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </div>
             <div class="col-sm col-md flex-first">
                 <h2>Uthappizza</h2>
+                <div class="hidden-xs-down">
                 <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                </div>
             </div>
         </div>
 
@@ -47,8 +49,10 @@
             </div>
             <div class="col-sm col-md">
                 <h2>Weekend Grand Buffet</h2>
+               <div class="hidden-xs-down">
                 <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-            </div>
+               </div>        
+             </div>
         </div>
 
         <div class="row row-content align-items-center">
@@ -58,7 +62,9 @@
             <div class="col-sm pull-sm-4 col-md pull-md-3">
                 <h2>Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
+                <div class="hidden-xs-down">
                 <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                </div>
             </div>
         </div>
     </div>
