--- a/index.html
+++ b/index.html
@@ -14,7 +14,25 @@
 </head>
 
 <body>
+    <!--Navigation bar -->
+<nav class="navbar navbar-inverse navbar-toggleable-sm fixed-top">
+    <div class="container">
+   
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+    <span class="navbar-toggler-icon"></span>
+</button>
 
+ <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+<div class="collapse navbar-collapse" id="Navbar">
+    <ul class="navbar-nav">
+       <li class="nav-item active"> <a class="nav-link" href="index.html"><i></i>Home</a></li>
+       <li class="nav-item"> <a class="nav-link" href="./aboutus.html"><i></i>About</a></li>
+       <li class="nav-item"> <a class="nav-link" href="#"><i></i>Menu </a></li>
+       <li class="nav-item"> <a class="nav-link" href="#"><i></i>Contact</a></li>
+    </ul>
+    <div>
+    </div>
+</nav>
     <header>
         <div class="jumbotron">
             <div class="container">
@@ -75,8 +93,8 @@
                 <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
