--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
        <li class="nav-item"> <a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
        <li class="nav-item active"> <a class="nav-link" href="./aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
        <li class="nav-item"> <a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Menu </a></li>
-       <li class="nav-item"> <a class="nav-link" href="#"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+       <li class="nav-item"> <a class="nav-link" href="./contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
     </ul>
     <div>
     </div>
@@ -55,6 +55,7 @@
                 <ol class="col-12 breadcrumb">
                     <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
                     <li class="breadcrumb-item active">About us</li>
+                    <li class="breadcrumb-item active"><a href="./contactus.html">Contact</a></li>
                 </ol>
                 <div class="col-12">
                <h3>About Us</h3>
@@ -111,7 +112,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="./aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="./contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5">
