--- a/aboutus.html
+++ b/aboutus.html
@@ -25,7 +25,7 @@
     <span class="navbar-toggler-icon"></span>
 </button>
 
- <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+ <a class="navbar-brand" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
 <div class="collapse navbar-collapse" id="Navbar">
     <ul class="navbar-nav">
        <li class="nav-item"> <a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
@@ -43,7 +43,8 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col col-sm">
+                <div class="col col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -73,9 +74,9 @@
             </div>
 
             <div class="col-sm">
-                <div class="card">
-                   <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
-                   <div class="card-block">
+                <div class="panel">
+                   <h3 class="panel-title panel-primary text-white">Facts At a Glance</h3>
+                   <div class="panel-body">
                 <dl class="row">
                     <dt class="col-6">Started </dt>
                     <dd class="col-6">3 feb. 2013</dd>
