--- a/index.html
+++ b/index.html
@@ -26,15 +26,55 @@
 
  <a class="navbar-brand" href="./index.html"><img src="img/logo.png" height="30" width="41"></a>
 <div class="collapse navbar-collapse" id="Navbar">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
        <li class="nav-item active"> <a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
        <li class="nav-item"> <a class="nav-link" href="./aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
        <li class="nav-item"> <a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Menu</a></li>
        <li class="nav-item"> <a class="nav-link" href="./contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
     </ul>
+    <span class="navbar-text">
+        <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+    </span>
     <div>
     </div>
 </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;
+
+                    </button>
+                </div>
+                    <div class="modal-body">
+                        <form class="form-inline">
+                            <div class="form-group">
+                                    <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                    <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                                </div>
+                                <div class="form-group">
+                                    <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                    <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                                </div>
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="checkbox"> Remember me
+                                    </label>
+                                </div>
+                        </form>
+                   </div>
+                   <div class="modal-footer">
+                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
+
+                   </div>
+            </div>
+
+        </div>
+
+    </div>
     <header>
         <div class="jumbotron">
             <div class="container">
@@ -48,7 +88,7 @@
                 </div>
                 <div class="col col-sm align-self-center">
                 <div class="btn-group" role="group">
-                     <a class="btn btn-warning btn-md" href="#reservetable">Reserve Table</a>
+                     <a role="button" class="btn btn-block btn-warning btn-sm" data-placement="bottom" data-toggle="tooltip" data-html="true" title="Or Call us at<br><strong>+852 1234568</strong>" href="#reservetable">Reserve Table</a>
                 </div>
                 </div>
                 
@@ -246,6 +286,12 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+        </script>
 </body>
 
 </html>
