--- a/aboutus.html
+++ b/aboutus.html
@@ -7,11 +7,13 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- bootstrap css-->
+     <!-- build:css css/main.css-->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-   <link rel="stylesheet" href="bootstrap-social.css">
+   <link rel="stylesheet" href="css/bootstrap-social.css">
    <link rel="stylesheet" href="css/styles.css">
-    
+    <!-- endbuild --> 
+
     <title>Ristorante Con Fusion: About Us</title>
 
 </head>
@@ -244,10 +246,11 @@
         </div>
     </footer>
      <!-- jQuery first, then Tether, then Bootstrap JS. -->
+       <!-- build:js js/main.js-->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
+ <!-- endbuild-->
 </body>
 
 </html>
