--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
        <li class="nav-item"> <a class="nav-link" href="./contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
     </ul>
     <span class="navbar-text">
-        <a data-toggle="modal" data-target="#loginModal"><span class="fa fa-sign-in"></span> Login</a>
+        <a id="login"><span class="fa fa-sign-in"></span> Login</a>
     </span>
     <div>
     </div>
@@ -51,7 +51,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h3 class="modal-title">Reserve table</h3>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button id="X" type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
                     
@@ -153,7 +153,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;
+                    <button id="X" type="button" class="close" data-dismiss="modal">&times;
 
                     </button>
                 </div>
@@ -197,7 +197,7 @@
                 </div>
                 <div class="col col-sm align-self-center">
                 <div class="btn-group" role="group">
-                     <a role="button" class="btn btn-block btn-warning btn-sm"  data-toggle="modal" data-target="#reserveform">Reserve Table</a>
+                     <a role="button" class="btn btn-block btn-warning btn-sm" id="reservetableform" >Reserve Table</a>
                 </div>
                 </div>
                 
